--- a/inicio.tex
+++ b/inicio.tex
@@ -81,7 +81,7 @@ Therefore, the result of this work is a system able to classify objects and meas
 \listadefiguras % geracao automatica da lista de figuras
 \listadetabelas % geracao automatica da lista de tabelas
 \listadesiglas % geracao automatica da lista de siglas
-\listadesimbolos % geracao automatica da lista de simbolos
+% \listadesimbolos % geracao automatica da lista de simbolos
 
 % sumario
 \sumario % geracao automatica do sumario
