--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -6,7 +6,7 @@ A seção \ref{sec:testes_ambiente} apresenta um ambiente de testes, que possibili
 
 \section{Ambiente de testes} \label{sec:testes_ambiente}
 
-Inicialmente para validar o sistema proposto é necessária a definição dos objetos a serem reconhecidos. Com o objetivo de possibilitar a validação do sistema porém sem comprometer a aplicação futuramente pretendida para o projeto selecionou-se os objetos dispostos na figura \ref{fig:testes_objetos}. Os objetos são caracteres alfanuméricos, formas geométricas básicas e algumas formas aleatórias. Os objetos foram selecionados com o objetivo de testar a robustez do sistema. Portanto foram utilizadas formas semelhantes, como o carácter ``S'' e o número ``5'', o carácter ``A'' e sua forma em negrito ``{\bf A}'', um triangulo retângulo e um triângulo isósceles. Além disso existem algumas peculiaridades em alguns caracteres. O carácter ``S'', por exemplo, possui a parte superior ligeiramente menor que a inferior, avaliando a robustez e precisão da estimativa de ângulo. Para posteriores referências nomeou-se os objetos da figura \ref{fig:testes_objetos} como segue, da esquerda para a direita e de cima para baixo tem-se:  $A$, $C$, $5$, $T$, $R$, $G$, $S$, $6$, $Bb$, $tr$, $l$, $Ab$, $ti$, $bn$, $\$$, $sn$.
+Inicialmente para validar o sistema proposto é necessária a definição dos objetos a serem reconhecidos. Com o objetivo de possibilitar a validação do sistema porém sem comprometer a aplicação futuramente pretendida para o projeto selecionou-se os objetos dispostos na figura \ref{fig:testes_objetos}. Os objetos são caracteres alfanuméricos, formas geométricas básicas e algumas formas aleatórias. Os objetos foram selecionados com o objetivo de testar a robustez do sistema. Portanto foram utilizadas formas semelhantes, como o caractere ``S'' e o número ``5'', o caractere ``A'' e sua forma em negrito ``{\bf A}'', um triangulo retângulo e um triângulo isósceles. Além disso existem algumas peculiaridades em alguns caracteres. O caractere ``S'', por exemplo, possui a parte superior ligeiramente menor que a inferior, avaliando a robustez e precisão da estimativa de ângulo. Para posteriores referências nomeou-se os objetos da figura \ref{fig:testes_objetos} como segue, da esquerda para a direita e de cima para baixo tem-se:  $A$, $C$, $5$, $T$, $R$, $G$, $S$, $6$, $Bb$, $tr$, $l$, $Ab$, $ti$, $bn$, $\$$, $sn$.
 
 \begin{figure}[H]
 	\centering
@@ -72,9 +72,9 @@ O sistema foi testado com duas configurações diferentes. A primeira configuração
 
 \subsection{Primeiro teste: 8 objetos}
 
-Inicialmente cada objeto foi posicionado no ambiente de testes e foram efetuadas $360$ capturas. Uma captura a cada $1^o$, tanto para o fundo, quanto para o objeto. As imagens foram salvas e a classe e ângulo de captura armazenados. Após capturar as imagens para todos os objetos os descritores foram calculados conforme exposto no capítulo \ref{chap:desenv}. Tanto a rede de classificação quanto as redes de estimativa de ângulo foram treinadas.
+Inicialmente cada objeto foi posicionado no ambiente de testes e foram efetuadas $360$ capturas. Uma captura a cada $1^o$, tanto para o fundo, quanto para o objeto. As imagens foram salvas e a classe e ângulo de captura armazenados. Após capturar as imagens para todos os objetos os descritores foram calculados conforme exposto no capítulo \ref{chap:desenv}. Tanto a rede de classificação quanto as redes de estimativa de ângulo foram treinadas com os descritores das $360$ capturas.
 
-Na sequência foram capturas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo. Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para cada objeto existem duas classes na matriz de confusão. Uma para a normalização utilizando o autovetor $A$ e outra para o autovetor $A'=-A$. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste1_medio}, \ref{fig:testes_teste1_desvio} e \ref{fig:testes_teste1_maximo}.
+Na sequência foram capturadas 20 imagens em rotações aleatórias de cada objeto e as respectivas imagens de fundo ($8$ objetos $x$ $20$ ângulos = $160$ imagens). Novamente os dados foram armazenados. O sistema foi executado para as 160 imagens de teste capturadas e o resultado foi comparado com os valores esperados. A comparação entre valores de classe esperados e obtidos pode ser visto na matriz de confusão apresentada na figura \ref{fig:testes_teste1_matriz}. Para cada objeto existem duas classes na matriz de confusão. Uma para a normalização utilizando o autovetor $A$ e outra para o autovetor $A'=-A$. O valor esperado na diagonal da matriz de confusão é de $A + A' = 20$, pois foram capturadas 20 imagens que podem ter a normalização correta utilizando tanto $A$ quanto $A'$. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste1_medio}, \ref{fig:testes_teste1_desvio} e \ref{fig:testes_teste1_maximo}.
 
 \begin{figure}[H]
 	\centering
@@ -112,7 +112,7 @@ Na sequência foram capturas 20 imagens em rotações aleatórias de cada objeto e a
 
 \subsection{Segundo teste: 16 objetos}
 
-O mesmo procedimento executado para o primeiro teste foi executado para o segundo, no entanto com algumas diferenças. Foram utilizados todos os 16 objetos mostrados na figura \ref{fig:testes_objetos}. Para o objeto $l$ foram efetuadas apenas $180$ capturas de $0$ a $180^o$ por se tratar de um objeto simétrico. Para os demais objetos foram efetuadas $360$ capturas. Após a captura as redes de classificação e estimativa de ângulo foram treinadas.
+O mesmo procedimento executado para o primeiro teste foi executado para o segundo, no entanto com algumas diferenças. Foram utilizados todos os 16 objetos mostrados na figura \ref{fig:testes_objetos}. Para o objeto $l$ foram efetuadas apenas $180$ capturas de $0$ a $179^o$ por se tratar de um objeto simétrico. Para os demais objetos foram efetuadas $360$ capturas. Após a captura as redes de classificação e estimativa de ângulo foram treinadas.
 
 Em seguida foram capturadas 20 imagens em rotações aleatórias para cada objeto, totalizando 320 imagens de teste. O sistema foi executado e os resultados foram comparados com os valores esperados conforme a matriz de confusão apresentada na figura \ref{fig:testes_teste2_matriz}. A matriz de confusão apresentada mostra apenas 31 classes ao invés de 32 como esperado. Isso se dá pelo fato do objetos $l$ ser simétrico, resultando sempre em um autovetor correto para a normalização. Para a estimativa do ângulo o resultado pode ser visto nas figuras \ref{fig:testes_teste2_medio}, \ref{fig:testes_teste2_desvio} e \ref{fig:testes_teste2_maximo}.
 
@@ -153,7 +153,7 @@ Em seguida foram capturadas 20 imagens em rotações aleatórias para cada objeto, 
 
 Nesse capítulo apresentou-se um ambiente de testes automatizado que possibilitou a validação do sistema apresentado no capítulo \ref{chap:desenv}. Utilizando o ambiente foram executados dois grupos de testes. O primeiro com 8 objetos e o segundo com 16 objetos. 
 
-O sistema mostrou-se capaz de classificar todos os objetos corretamente com $100\%$ de acerto. Isso se deu devido à qualidade dos descritores calculados, que permitiram resumir as principais características de cada classe. Além disso a topologia da rede de classificação teve papel fundamental para a convergência do treinamento e para a qualidade de decisão. Inicialmente havia sido utilizada uma rede com apenas uma saída, onde cada classe estava associada a uma faixa de valores entre $0$ e $1$. O resultado dessa abordagem inicial está exposto na figura \ref{fig:testes_teste0_matriz}. Como se pode ver, a taxa de acerto foi de apenas $78\%$, o que é inaceitável para o problema, visto que um erro na classificação automaticamente resultará em falha na estimativa do ângulo.
+O sistema mostrou-se capaz de classificar todos os objetos corretamente com $100\%$ de acerto. Isso se deu devido à qualidade dos descritores calculados, que permitiram resumir as principais características de cada classe. Além disso a topologia da rede de classificação teve papel fundamental para a convergência do treinamento e para a qualidade de decisão. Inicialmente havia sido utilizada uma rede com apenas uma saída, onde cada classe estava associada a um intervalo de valores dentro da faixa dinâmica de saída da rede ($0$ até $1$). O resultado dessa abordagem inicial está exposto na figura \ref{fig:testes_teste0_matriz}. Como se pode ver, a taxa de acerto foi de apenas $78\%$, o que é inaceitável para o problema, visto que um erro na classificação automaticamente resultará em falha na estimativa do ângulo.
 
 \begin{figure}[H]
 	\centering
