--- a/inicio.tex
+++ b/inicio.tex
@@ -6,8 +6,9 @@
 \documento{Trabalho de Conclusão de Curso} % [Trabalho de Conclus\~ao de Curso] ou [Relat\'orio de Est\'agio]
 \titulacao{Engenheiro} % [T\'ecnico], [Tecn\'ologo] ou [Engenheiro]
 
-\titulo{Classificação de objetos metálicos e medida de sua respectiva posição angular} % titulo do trabalho em portugues
-\title{Classification of metallic objects and measure of their respective angular position} % titulo do trabalho em ingles
+
+\titulo{Sistema de visão computacional para a classificação e medida da posição angular de objetos metálicos} % titulo do trabalho em portugues
+\title{Computational vision system for classification and measure of the angular position of metallic objects} % titulo do trabalho em ingles
 
 \autor{Telmo Friesen} % primeiro autor do trabalho
 %\autordois{Júlio Cesar Nardelli Borges} % segundo autor do trabalho, caso exista
@@ -26,7 +27,7 @@
 %\coorientador[Co-orientadora:]{Nome da Co-orientadora} % <- no caso de co-orientadora, usar esta sintaxe
 
 \local{Curitiba} % cidade
-\data{2013} % ano
+\data{2014} % ano
 %---------- Inicio do Documento ----------
 \begin{document}
 
