--- a/introducao.tex
+++ b/introducao.tex
@@ -44,6 +44,16 @@ detecção de bordas, algoritmos de limiarização, segmentação baseada em crescimen
 O segundo objetivo é analisar e aplicar técnicas de descrição de imagens, como algoritmos de descrição de contornos, descrição de regiões, entre outros.
 O terceiro objetivo é o emprego de uma técnica de aprendizagem de máquina, como redes neurais, que possibilite a classificação e determinação do ângulo de objetos previamente conhecidos pelo sistema.
 
+Na figura \ref{fig:intr_vg} mostra-se a visão geral do sistema a ser desenvolvido. Os objetivos do projeto restringem-se ao desenvolvimento do sistema em MATLAB representado no quadro ``Matlab" da figura. No entanto para validação do sistema será necessário o desenvolvimento do ambiente de testes.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{./figs/visao_geral2.png}
+	\caption{Visão geral do sistema.}
+	\fonte{Autoria própria}
+	\label{fig:intr_vg}
+\end{figure}
+
 \section{Metodologia}
 
 O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo.
