--- a/concl.tex
+++ b/concl.tex
@@ -69,7 +69,7 @@ O sistema apresentou-se capaz de classificar todos os objetos testados corretame
 Na estimativa do ângulo, obteve-se a precisão de $\pm4.1^o$ para o teste com 8 objetos e $\pm4.5^o$ para o teste com 16 objetos. O erro médio manteve-se em $1.3^o$, com desvio de $0.85^o$ para o primeiro teste e $1.1^o$, com desvio de $0.8^o$ para o segundo teste. O erro médio geral ficou portanto em $1.2^o$. O erro na estimativa do ângulo é bastante influenciado pelo sucesso na etapa de segmentação e normalização da imagem. Sendo assim, para obter bons resultados é necessário controlar ao máximo as condições externas de captura das imagens. Condições boas de iluminação que não formem sombras, por exemplo, tendem a melhorar o resultado da etapa de segmentação. 
 Pôde-se observar também que o erro médio na estimativa do ângulo não aumentou com a inserção de mais objetos no sistema. Isso se deu devido a estimativa ser feita com uma rede neural específica para cada objeto. O erro máximo aumentou devido aos pesos iniciais das redes neurais que são escolhidos aleatoriamente antes do treinamento. Essa aleatoriedade pode influenciar o resultado entre redes treinadas e testadas com o mesmo conjunto de treinamento e teste.
 
-Os testes mostraram que o sistema foi capaz de identificar os objetos corretamente e estimar a posição angular com precisão de $\pm4.5^o$ no pior caso. 
+Os testes mostraram que o sistema foi capaz de classificar os objetos corretamente e estimar a posição angular com precisão de $\pm4.5^o$ no pior caso. 
 Portanto, os objetivos do projeto foram alcançados e a metodologia proposta foi seguida com algumas adaptações.
 
 \section{Trabalhos Futuros}
