--- a/inicio.tex
+++ b/inicio.tex
@@ -47,6 +47,8 @@ amor e dedicação ao me dar a oportunidade de cursar Engenharia de Computação. E 
 %Introdução
 Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos, a inspeção do acabamento em objetos metálicos, a produção de circuitos impressos, entre
 outros. Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. 
+%Motivação
+O desenvolvimento deste projeto é motivado pela posterior aplicação em uma linha de produção real. A utilização do projeto deve reduzir os custos operacionais da linha, diminuindo a margem de erro e aumentando a velocidade da produção.
 %Objetivo
 O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
 % Metodologia
@@ -54,7 +56,7 @@ O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consist
 % Desenvolvimento
 O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, formando um descritor que é fornecido ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
 % Resultados
-Portanto, o resultado do trabalho é um sistema capaz de classificar objetos e medir o ângulo desses objetos utilizando técnicas de processamento de imagens e aprendizado de máquina.
+Portanto, o resultado do trabalho é um sistema capaz de classificar corretamente $100\%$ dos objetos testados e medir o ângulo desses objetos com precisão de $\pm4.5^o$ no pior caso, utilizando para isso técnicas de processamento de imagens e aprendizado de máquina.
 
 \end{resumo}
 
